--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -7,23 +7,195 @@ html{
     box-sizing: inherit;
 }
 
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Poppins', sans-serif;
+}
+
+
 body{
     margin: 0;
     padding: 0;
+    line-height: 1.3;
     font-family: 'Open Sans', sans-serif;
+    background-color: $violet;
+    background-image: url('../images/bg-mobile.svg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    
 
-
-    h1,h2,h3,h4,h5,h6{
-        font-family: 'Poppins', sans-serif;
+    @media (min-width: 48rem){
+    	background-image: url('../images/bg-desktop.svg');
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        padding: 0 1.875rem;
+        
     }
 
+    header{
+        margin: 2.1875rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
-    .attribution { 
-        font-size: 11px; 
-        text-align: center; 
+        @media (min-width: 48rem){
+            margin: 2.1875rem 0;
+            width: 100%;
+            max-width: 84.375rem;
+            align-self: center;
+        }
 
-        a { 
-            color: hsl(228, 45%, 44%); 
+        img{
+            width: 100%;
+            height: auto;
+            max-width: 7.5rem;
+
+            @media (min-width: 48rem){
+            	max-width: 11.25rem;
+            }
+        }
+    }
+
+    main{
+        margin: 3.4375rem 2.1875rem 0 2.1875rem;
+
+        @media (min-width: 48rem){
+        	display: flex;
+            margin: 3.4375rem 0 0 0;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 84.375rem;
+            align-self: center;
+            
+        }
+
+        #col1{
+            img{
+                width: 100%;
+                height: auto;
+
+            }
+
+            @media (min-width: 48rem){
+            	display:flex;
+                align-items: center;
+                width: 50%;
+            }
+        }
+
+        #col2{
+            color: white;
+            text-align: center;
+            margin-top: 2.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            
+
+            @media (min-width: 48rem){
+            	display:flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                width: 45%;
+                margin-top: 0;
+                text-align: left;
+                padding: 2.5rem 0 0 0;
+            }
+
+            h1{
+                font-weight: 600;
+                font-size: 1.4375rem;
+                margin-bottom: 0;
+                line-height: 1.5;
+
+                @media (min-width: 48rem){
+                	margin:0;
+                    font-size: 1.875rem;
+                }
+            }
+
+            p{
+                font-size: 1rem;
+                line-height: 1.5;
+                margin-bottom: 1.5625rem;
+            }
+
+            a{
+                background-color: white;
+                color: $violet;
+                display: block;
+                width: 100%;
+                max-width: 12.5rem;
+                text-decoration: none;
+                padding: .5625rem 0;
+                font-size: .875rem;
+                font-weight: 400;
+                border-radius: 3.125rem;
+                box-shadow: 0 .3125rem .375rem -0.1875rem rgba(0, 0, 0, 0.4);
+
+                @media (min-width: 48rem){
+                	text-align: center;
+                    padding: .875rem 0;
+                    transition: all 0.5s ease-in-out;
+
+                    &:hover{
+                        background-color: $soft-magenta;
+                        color: white;
+                    }
+                }
+            }
+        }
+    }
+    
+
+
+    footer{
+
+        margin: 5rem 0 0 0;
+
+        @media (min-width: 48rem){
+        	position:absolute;
+            bottom:0;
+            width: 100%;
+            max-width: 84.375rem;
+            align-self: center;
+        }
+
+        .social-media{
+            font-size: 1.4375rem;
+            display: flex;
+            justify-content: center;
+            color: white;
+
+            @media (min-width: 48rem){
+            	font-size: 1.875rem;
+                justify-content: flex-end;
+            }
+
+            i{
+                margin: 0 .25rem;
+                transition: all 0.5s ease-in-out;
+            }
+
+            i:hover{
+                color: $soft-magenta;
+                cursor: pointer;;
+            }
+        }
+
+        .attribution { 
+            font-size: .6875rem; 
+            text-align: center; 
+            color: white;
+            margin-top: 1.25rem;
+    
+            a { 
+                color: white; 
+            }
         }
     }
 }
