--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -161,29 +161,44 @@ body{
         	position:absolute;
             bottom:0;
             width: 100%;
-            max-width: 84.375rem;
             align-self: center;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            padding: 0 1.875rem;
         }
 
-        .social-media{
-            font-size: 1.4375rem;
-            display: flex;
-            justify-content: center;
-            color: white;
+        .social-media-wrapper{
+
 
             @media (min-width: 48rem){
-            	font-size: 1.875rem;
+            	width:100%;
+                max-width: 84.375rem;
+                display: flex;
                 justify-content: flex-end;
+                justify-self: center;
             }
 
-            i{
-                margin: 0 .25rem;
-                transition: all 0.5s ease-in-out;
-            }
-
-            i:hover{
-                color: $soft-magenta;
-                cursor: pointer;;
+            .social-media{
+                font-size: 1.4375rem;
+                display: flex;
+                justify-content: center;
+                color: white;
+    
+                @media (min-width: 48rem){
+                    font-size: 1.875rem;
+                    justify-content: flex-end;
+                }
+    
+                i{
+                    margin: 0 .25rem;
+                    transition: all 0.5s ease-in-out;
+                }
+    
+                i:hover{
+                    color: $soft-magenta;
+                    cursor: pointer;;
+                }
             }
         }
 
